fix: fixed broken styles for logos and disable goodhands banner (#2045)

--- a/assets/styles/layouts/Footer.scss
+++ b/assets/styles/layouts/Footer.scss
@@ -496,7 +496,8 @@ body.test-na-umenie-nabirat-tekst,
 body.dazi-ceshi,
 body.post-type-archive-ms_directory,
 body.single-ms_directory,
-body.shopify-chat-software {
+body.shopify-chat-software,
+body.post-type-archive-ms_awards {
 
 	.Footer__middle {
 		display: none !important;
